@@ -217,6 +217,38 @@ $rs->result_class( 'DBIx::Class::ResultClass::HashRefInflator' );
 is_deeply [ $rs->all ], $data{Release}, 'sanity check that items were inserted'
     or diag explain [ $rs->all ];
 
+subtest 'since' => sub {
+    my $rs = $schema->resultset( 'Release' )->since( '2016-08-20T00:00:00' );
+    $rs->result_class( 'DBIx::Class::ResultClass::HashRefInflator' );
+    is_deeply [ $rs->all ], [ $data{Release}->@[1..3] ], 'get items since 2016-08-20'
+        or diag explain [ $rs->all ];
+};
+
+subtest 'maturity' => sub {
+    subtest 'stable only' => sub {
+        my $rs = $schema->resultset( 'Release' )->maturity( 'stable' );
+        $rs->result_class( 'DBIx::Class::ResultClass::HashRefInflator' );
+        is_deeply [ $rs->all ], [ $data{Release}->@[0..2] ], 'get only stable items'
+            or diag explain [ $rs->all ];
+    };
+
+    subtest 'development only' => sub {
+        my $rs = $schema->resultset( 'Release' )->maturity( 'dev' );
+        $rs->result_class( 'DBIx::Class::ResultClass::HashRefInflator' );
+        is_deeply [ $rs->all ], [ $data{Release}->@[3] ], 'get only dev items'
+            or diag explain [ $rs->all ];
+    };
+};
+
+subtest 'since and maturity' => sub {
+     my $rs = $schema->resultset( 'Release' )
+       ->since( '2016-08-20T00:00:00' )
+       ->maturity( 'stable' );
+    $rs->result_class( 'DBIx::Class::ResultClass::HashRefInflator' );
+    is_deeply [ $rs->all ], [ $data{Release}->@[1..2] ], 'get stable items since 2016-08-20'
+        or diag explain [ $rs->all ];
+};
+
 subtest 'by_dist' => sub {
     my $rs = $schema->resultset( 'Release' )->by_dist( 'My-Dist' );
     $rs->result_class( 'DBIx::Class::ResultClass::HashRefInflator' );
@@ -229,8 +261,16 @@ subtest 'by_dist' => sub {
         $rs->result_class( 'DBIx::Class::ResultClass::HashRefInflator' );
         is_deeply [ $rs->all ], [ $data{Release}[1] ], 'get items for My-Dist'
             or diag explain [ $rs->all ];
-
     };
+
+    subtest 'maturity' => sub {
+        my $rs = $schema->resultset( 'Release' )->by_dist( 'My-Other' )
+                ->maturity( 'stable' );
+        $rs->result_class( 'DBIx::Class::ResultClass::HashRefInflator' );
+        is_deeply [ $rs->all ], [ $data{Release}[2] ], 'get stable items for My-Other'
+            or diag explain [ $rs->all ];
+    };
+
 };
 
 subtest 'by_author' => sub {
@@ -245,15 +285,15 @@ subtest 'by_author' => sub {
         $rs->result_class( 'DBIx::Class::ResultClass::HashRefInflator' );
         is_deeply [ $rs->all ], [ $data{Release}->@[2,3] ], 'get items for PREACTION'
             or diag explain [ $rs->all ];
-
     };
-};
 
-subtest 'since' => sub {
-    my $rs = $schema->resultset( 'Release' )->since( '2016-08-20T00:00:00' );
-    $rs->result_class( 'DBIx::Class::ResultClass::HashRefInflator' );
-    is_deeply [ $rs->all ], [ $data{Release}->@[1..3] ], 'get items since 2016-08-20'
-        or diag explain [ $rs->all ];
+    subtest 'maturity' => sub {
+        my $rs = $schema->resultset( 'Release' )->by_author( 'PREACTION' )
+                ->maturity( 'dev' );
+        $rs->result_class( 'DBIx::Class::ResultClass::HashRefInflator' );
+        is_deeply [ $rs->all ], [ $data{Release}[3] ], 'get dev items for PREACTION'
+            or diag explain [ $rs->all ];
+    };
 };
 
 done_testing;
